--- a/.github/workflows/build-win64.yml
+++ b/.github/workflows/build-win64.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Git describe
         id: ghd
         uses: proudust/gh-describe@v2
+        with:
+          default: ''
       - name: Build Dino
         run: |
           msys2 -c './build-win64.sh --prepare'
@@ -25,7 +27,7 @@ jobs:
       - name: Upload Dino installer
         uses: actions/upload-artifact@v4
         with:
-          name: dino-installer
+          name: dino-installer.exe
           path: windows-installer/dino-installer.exe
       - name: Release Dino installer
         if: ${{ github.ref_type == 'tag' }}
