--- a/.github/workflows/build-flatpak.yml
+++ b/.github/workflows/build-flatpak.yml
@@ -16,16 +16,26 @@ jobs:
             with:
               manifest-path: im.dino.Dino.json
               build-bundle: true
-          - name: release
-            uses: actions/create-release@v1
-            # if: contains('cicd', github.ref_name)
-            id: create_release
+        #   - name: release
+        #     uses: actions/create-release@v1
+        #     # if: contains('cicd', github.ref_name)
+        #     id: create_release
+        #     with:
+        #       draft: false
+        #       prerelease: false
+        #       release_name: ${{ steps.version.outputs.version }}
+        #       tag_name: 'test_3'
+        #       # body_path: CHANGELOG.md
+        #     env:
+        #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          - name: Release Dino installer
+            if: ${{ github.ref_type == 'tag' }}
+            uses: svenstaro/upload-release-action@2.9.0
             with:
-              draft: false
-              prerelease: false
-              release_name: ${{ steps.version.outputs.version }}
-              tag_name: 'test'
-              # body_path: CHANGELOG.md
-            env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                repo_token: ${{ secrets.GITHUB_TOKEN }}
+                file: app.flatpak
+                asset_name: app.flatpak
+                tag: "test_tag"
+                release_name: Dino
+                
     
