--- a/.github/workflows/build-flatpak.yml
+++ b/.github/workflows/build-flatpak.yml
@@ -29,7 +29,7 @@ jobs:
         #     env:
         #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           - name: Release Dino installer
-            if: ${{ github.ref_type == 'tag' }}
+            # if: ${{ github.ref_type == 'tag' }}
             uses: svenstaro/upload-release-action@2.9.0
             with:
                 repo_token: ${{ secrets.GITHUB_TOKEN }}
