--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,13 +39,12 @@ jobs:
         - uses: flatpak/flatpak-github-actions/flatpak-builder@v6.1
           with:
               manifest-path: im.dino.Dino.json
-              build-bundle: true
+              build-bundle: true 
         - name: Git describe
           if: ${{ github.ref_type == 'tag' }}
+          run: |
+            echo "FLATPAK_BUILD_TAG=$(git describe --tags)" >> $GITHUB_OUTPUT
           id: ghd
-          uses: proudust/gh-describe@v2
-          with:
-            default: ''
         - name: Release Dino installer
           if: ${{ github.ref_type == 'tag' }}
           uses: svenstaro/upload-release-action@2.9.0
@@ -54,4 +53,4 @@ jobs:
               file: app.flatpak
               asset_name: app.flatpak
               tag: ${{ github.ref }}
-              release_name: Dino ${{ steps.ghd.outputs.describe }}
+              release_name: Dino ${{ github.ref_name }}
