--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,4 +56,4 @@ jobs:
               file: app.flatpak
               asset_name: app.flatpak
               tag: ${{ github.ref }}
-              release_name: Dino ${{ steps.ghd.outputs.FLATPAK_BUILD_TAG }}
+              release_name: Dino ${{ github.ref_name }}
